# pubTools-DCF

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  pyproject.toml  vercel.json
.github/workflows/: ci.yml  vercel-preview-smoke.yml
app/: __init__.py  accounts.py  api.py  auth.py  dcf_engine.py  exceptions.py  fundamentals.py  http_cache.py  models.py  normalization.py  rate_limit.py  redis_cache.py  refresh.py  refresh_window.py  response_cache.py  schemas.py  supabase.py
app/demo_data/: AAPL.json  MSFT.json  NVDA.json  WMT.json
app/providers/: finnhub.py  fmp.py
docs/: apis.html  index.html  portfolio.html
project-docs/: ARCHITECTURE_DECISIONS.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  REQUEST_FLOW.md  TODO.md  issues.MD
scripts/: build_demo_snapshots.py  create_api_key.py  load_probe.py  report_usage.py  smoke_fetch.py
supabase/migrations/: 001_phase5_auth_usage.sql  002_phase6_customer_login.sql  003_phase8_snapshots.sql  004_phase8_freshness.sql
tests/: conftest.py  fake_supabase.py  test_accounts.py  test_api.py  test_data_layer.py  test_dcf_engine.py  test_finnhub.py  test_http_cache.py  test_login_rate_limit.py  test_openapi_contract.py  test_redis_cache.py  test_refresh.py  test_response_cache.py  test_snapshots.py  test_supabase.py
tests/fixtures/fmp/: AAPL.json  JPM.json
tests/snapshots/: openapi.sha256
