[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "dcf-valuation-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
]

# Only the app/ tree is the installable package. Without this, setuptools'
# auto-discovery also sees runtime dirs like data/ (raw provider cache) and
# refuses to build ("Multiple top-level packages discovered").
[tool.setuptools.packages.find]
include = ["app*"]
[tool.pytest.ini_options]
testpaths = ["tests"]
[tool.vercel]
entrypoint = "app.api:app"
