[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "dcf-valuation-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "fastapi>=0.115",
    # IANA timezone data for zoneinfo on platforms without a system tz
    # database (Windows dev machines). Linux (Vercel) ships its own; the
    # marker keeps production installs unchanged. Needed for the daily
    # refresh's America/New_York window guard (Phase 8 Slice C).
    "tzdata>=2024.1; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
    "uvicorn>=0.30",
    "python-dotenv>=1.0",
    "pytest>=8.0",
    "hypothesis>=6.100",
    "ruff>=0.14,<1.0",
    "mypy>=1.18,<2.0",
    "build>=1.2,<2.0",
    "pytest-cov>=6,<8",
]

# Only the app/ tree is the installable package. Without this, setuptools'
# auto-discovery also sees runtime dirs like data/ (raw provider cache) and
# refuses to build ("Multiple top-level packages discovered").
[tool.setuptools.packages.find]
include = ["app*"]
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=93"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
files = ["app", "scripts"]
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
show_error_codes = true

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
fail_under = 93
show_missing = true
skip_covered = false

[tool.vercel]
entrypoint = "app.api:app"
